--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
   <body>
     <div class="container main">
         <div class="box">
+          <h1>Release 1.0</h1>
+          <p>Last minute content that was added for the 1.0 release.</p>
+        </div>
+        <div class="box">
           <h1>Bob's content</h1>
           <p>This paragraph was added by Bob.</p>
           <p>He is the new developer working on the layout of the webpage.</p>
